# dataclass_argparser

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CONDA_BUILD_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  QUICK_START_CONDA_BUILD.md  README.md  RELEASING.md  pixi.toml  pyproject.toml  recipe.yaml  release.sh  ty.toml
.github/: WORKFLOW_SETUP.md  copilot-agents.yml  copilot-instructions.md
.github/agents/: my-agent.md
.github/workflows/: ci.yml  copilot-agents.yml  publish.yml
examples/: __init__.py  basic_example.py  custom_flags_example.py  example_config.json  keyword_arguments_example.py  override_config.json  override_example.py
scripts/: update_version.sh
src/dataclass_argparser/: __init__.py  parser.py
tests/: __init__.py  test_config_files.py  test_custom_flags.py  test_dict_types.py  test_keyword_arguments.py  test_list_types.py  test_nested_types.py  test_optional_types.py  test_parser.py  test_pydantic_config_files.py  test_pydantic_nested_types.py  test_pydantic_optional_types.py  test_pydantic_parser.py  test_pydantic_type_validation.py  test_tuple_types.py
tests/dataclass/: test_config_files.py  test_default_values.py  test_nested_types.py  test_optional_types.py  test_type_validation.py
tests/pydantic/: conftest.py  test_config_files.py  test_nested_types.py  test_optional_types.py  test_parser.py  test_type_validation.py
